# E621-Account-Parser

./: .gitignore  Readme.md  nginx-template
parser-api/: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
parser-api/migrations/: V2__remove_relations.sql  V3__add_df_to_tags.sql  V4__remove_meta_tags.sql  v1_init.sql
parser-api/src/: api.rs  cors.rs  database.rs  db.rs  main.rs  models.rs  utils.rs
parser-api/src/models/: config.rs  mod.rs  posts.rs  tags_info.rs  users.rs
parser-api/src/utils/: idf.rs  mod.rs  scorer.rs
parser-web/: Cargo.toml  Trunk.toml  index.html  style.css
parser-web/src/: main.rs
parser-web/src/components/: fetch_analyze_button.rs  header.rs  mod.rs  post_card.rs  saved_accounts_select.rs  tag_chart_card.rs  theme_toggle.rs  user_info_alert.rs  user_search_form.rs
parser-web/src/models/: api.rs  config.rs  mod.rs  post.rs  tour.rs
parser-web/src/pages/: account.rs  feed.rs  home.rs  mod.rs
parser-web/src/pages/feed/feed_components/: mod.rs  saved_accounts.rs
parser-web/src/pages/home/home_components/: fetch_analyze_button.rs  mod.rs  saved_accounts.rs  tag_chart_card.rs  user_info_alert.rs
parser-web/static/: theme_script.js  tour.js
