[[bin]]
name = "e621-account-parser-api"
path = "src/main.rs"

[package]
name = "e621-account-parser-api"
version = "0.1.0"
edition = "2024"

[dependencies]
refinery = { version = "0.9.0", features = ["rusqlite"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = { version = "2.1.3" }
anyhow = { version = "*" }
notify = { version = "*" }
toml = { version = "*" }
arc-swap = { version = "*" }
rocket_okapi = { version = "0.9", features = ["swagger"] }
schemars = { version = "0.8.21", features = ["chrono"] }
