[[bin]]
name = "e621-account-parser-web"
path = "src/main.rs"

[package]
name = "e621-account-parser-web"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = { version = "0.2.100", features = [] }
web-sys = { version = "0.3.77", features = [
    "Window",
    "Storage",
    "StorageEvent",
    "HtmlElement",
    "HtmlSelectElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "CssStyleDeclaration",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "AbortController",
    "AbortSignal",
    "Request",
    "RequestInit",
    "Response",
    "console",
] }
urlencoding = { version = "2.1.3" }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = { version = "0.3.4" }
yew-router = { version = "0.18.0" }
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde-wasm-bindgen = "0.6.5"
